log
Mon Mar 22 18:05:59 UTC 2021: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:33: error: ‘list’ undeclared (first use in this function); did you mean ‘lista’?
     List *lista = malloc(sizeof(list));
                                 ^~~~
                                 lista
list.c:32:33: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
Mon Mar 22 18:06:28 UTC 2021: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|6
total_score: 0/70
0f06b5b
Mon Mar 22 18:06:40 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4541390
Tue Mar 23 22:23:09 UTC 2021: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5f4c73a
Tue Mar 23 22:25:07 UTC 2021: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
7974f9b
Tue Mar 23 22:44:43 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cf8cc44
Tue Mar 23 22:45:16 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
760de02
Tue Mar 23 22:46:35 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a5a660e
Tue Mar 23 22:49:29 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b70da58
Tue Mar 23 22:50:20 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
a936f33
Tue Mar 23 22:58:12 UTC 2021: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
b639194
Tue Mar 23 22:58:55 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
bf373e4
Tue Mar 23 23:01:28 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
c6fd846
Tue Mar 23 23:04:06 UTC 2021: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
641dc0b
Tue Mar 23 23:12:52 UTC 2021: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  0|0
9cd5f9c
Tue Mar 23 23:13:58 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ea90319
Tue Mar 23 23:15:35 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
4649e7c
Tue Mar 23 23:21:48 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
9c80336
Wed Mar 24 00:04:21 UTC 2021: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
108c79d
Wed Mar 24 00:17:17 UTC 2021: 
 list.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  0|0
94f2125
Wed Mar 24 00:18:32 UTC 2021: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
a9f77bd
Wed Mar 24 00:20:32 UTC 2021: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|0
1ea8c73
Wed Mar 24 02:13:33 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
5efb190
Wed Mar 24 02:15:39 UTC 2021: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
d483c43
Wed Mar 24 02:33:00 UTC 2021: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  5|4
total_score: 25/70
dc762b3
Wed Mar 24 02:34:48 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
e56408a
Wed Mar 24 02:37:16 UTC 2021: 
 list.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  0|0
fbe179f
Wed Mar 24 02:40:38 UTC 2021: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  6|4
total_score: 25/70
344e213
Wed Mar 24 02:43:40 UTC 2021: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
91ee389
Wed Mar 24 02:45:10 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
011ce99
Wed Mar 24 02:46:30 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8ee07de
Wed Mar 24 02:47:21 UTC 2021: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3b33c2d
Wed Mar 24 02:48:13 UTC 2021: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
f1e24a2
Wed Mar 24 02:48:55 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
fa4654d
